--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angularVideoBg",
+  "name": "@flagbit/angular-video-background",
   "version": "0.3.4",
   "devDependencies": {
     "grunt": "~0.4",
